fix: remove scroll on small screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1em;
+  overflow: hidden;
 }
 
 .main {
